# Open-DTM

./: .env  .env.example  .gitignore  CONTRIBUTING.md  ETHICAL_USE.md  LICENSE  README.md  api_design.md  architecture.md  docker-compose.yml  fault_tolerance.md  project_structure_and_snippets.md  pyproject.toml  pytest.ini  redis_structures.md  sample.txt  server.py  wordlist_management.md  worker.py  worker_logic.md
.github/workflows/: test.yml
app/: Dockerfile  config.py  main.py  requirements.txt
app/api/v1/: models.py
docs/: ETHICAL_USE.md  api_design.md  architecture.md  fault_tolerance.md  project_structure_and_snippets.md  redis_structures.md  wordlist_management.md  worker_logic.md
frontend/: package-lock.json
frontend/pages/: index.vue
scripts/: Dockerfile.monitor  config_monitor.py  monitor.py
src/: server.py  worker.py
templates/: index.html
tests/: test_server.py
workers/: Dockerfile  config.py  requirements_worker.txt  worker.py
